# fashion-vision

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  bad_url_check.py  clean_comments.py  convert_catalog.py  cuda_matching.py  cuda_model.py  docker-compose.yml  download_product_images.py  failed_urls.txt  matching.py  model.py  pyproject.toml  requirements.txt  run_all.py  setup.py  test1.py  video_url_cropper.html
app/: config.py
docs/: architecture.md  pipeline.md  setup.md
frontend/: package-lock.json  package.json
insta_reel_cropper/: background.js  content.js  cropper.css  cropper.html  cropper.js  manifest.json
notebooks/: model.ipynb  model.py  stable.ipynb  video frames.ipynb
outputs/: 2025-05-27_13-46-16_UTC.json  2025-05-31_14-01-37_UTC.json  2025-06-02_11-31-19_UTC.json
reports/: args.yaml  results.csv
result/: matched_results.csv
results/: matched_results_20250817_161843.csv  matched_results_20250822_192437.csv  matched_results_20250822_194648.csv  matched_results_20250822_200101.csv  matched_results_20250822_200513.csv  matched_results_20250822_201310.csv  matched_results_20250822_210149.csv  matched_results_20250822_212032.csv  matched_results_20250822_214336.csv  matched_results_20250822_215248.csv  matched_results_20250822_221954.csv  matched_results_20250822_230028.csv  matched_results_20250822_230615.csv
scripts/: analyze_index.py  build_index.py  download_models.py  extract_colors.py  ingest_data.py  match_reel.py  precompute_colors.py  start_server.py
src/: main.py  product_matcher.py  similar.py  (+1 more)
(+285 files in other folders)
